[tool.poetry]
name = "pytest-kubernetes"
version = "0.6.0"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]
readme = "README.md"
packages = [{include = "pytest_kubernetes"}]
repository = "https://github.com/Blueshoe/pytest-kubernetes"
classifiers = [
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.14"
pytest = "^8.3.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.6"
ruff = "^0.9.0"

[tool.poetry.plugins.pytest11]
pytest-kubernetes = "pytest_kubernetes.plugin"

[tool.pytest.ini_options]
markers = [
    "k8s: Kubernetes-based tests",
]

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
exclude = """
    tests
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
