[tool.poetry]
name = "pytest-kubernetes"
version = "0.7.3"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]
readme = "README.md"
packages = [{include = "pytest_kubernetes"}]
repository = "https://github.com/Blueshoe/pytest-kubernetes"
classifiers = [
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
pytest = ">=8.3.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.6"
ruff = "^0.11.0"

[tool.poetry.plugins.pytest11]
pytest-kubernetes = "pytest_kubernetes.plugin"

[tool.pytest.ini_options]
markers = [
    "k8s: Kubernetes-based tests",
]

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
exclude = """
    tests
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
